// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`toMatchJSON > assertion error has a nice output 1`] = `[TypeError: printDiffOrStringify is not a function]`;

exports[`toMatchJSON > assertion error has a nice output 2`] = `
[Error: [2mexpect([22m[31mreceived[39m[2m).[22mnot[2m.[22mtoMatchJSON[2m([22m[32mexpected[39m[2m)[22m 

Expected: not [32mObject {
  "foo": "bar",
  "spam": "eggs",
}[39m]
`;

exports[`toMatchJSON > assertion error has a nice output 3`] = `
[Error: [2mexpect([22m[31mreceived[39m[2m).[22mnot[2m.[22mtoMatchJSON[2m([22m[32mexpected[39m[2m)[22m 

Expected: not [32mObject {
  "foo": Anything,
  "spam": "eggs",
}[39m
Received:     [31mObject {
  "foo": "bar",
  "spam": "eggs",
}[39m]
`;

exports[`toMatchJSON > throws on invalid JSON 1`] = `[TypeError: matcherErrorMessage is not a function]`;

exports[`toMatchJSON > throws on invalid JSON 2`] = `[TypeError: matcherErrorMessage is not a function]`;

exports[`toMatchJSON > throws on invalid JSON 3`] = `[TypeError: matcherErrorMessage is not a function]`;

exports[`toMatchJSON > throws on invalid JSON 4`] = `[TypeError: matcherErrorMessage is not a function]`;

exports[`toMatchJSON > throws on invalid JSON 5`] = `[TypeError: matcherErrorMessage is not a function]`;

exports[`toMatchJSON > throws on invalid JSON 6`] = `[TypeError: matcherErrorMessage is not a function]`;
